<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gris_oscuro"
    tools:context=".RecuperarContrasena">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/banner_recuperarcontrasena"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/msj_datos_cuenta"
        android:textColor="@color/gris_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAlignment="center"
        android:text="@string/msj_datos_cuenta2"
        android:textColor="@color/gris_hint"/>

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Correo electrónico"
            android:textSize="15dp"
            android:background="@drawable/inputs"
            android:textColorHint="@color/gris_hint"
            android:textColor="@color/gris_hint"
            android:inputType="text"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/txtNumero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Número telefónico"
            android:textSize="15dp"
            android:background="@drawable/inputs"
            android:textColorHint="@color/gris_hint"
            android:textColor="@color/gris_hint"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gris_oscuro"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/btn_continuar"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/gris_hint"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/msj_datos_cuenta3"
        android:textColor="@color/gris_hint"/>
</LinearLayout>