<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialogbg">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:paddingTop="20dp"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:textColor="@color/naranja"
    android:textStyle="bold"
    android:textSize="18dp"
    android:text="USERNAME"
    android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="left">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_vector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/inicio"
            android:layout_marginLeft="10dp"
            android:textColor="@color/naranja"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/gris_hint"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:gravity="left">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favorite_vector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/favoritos"
            android:textColor="@color/naranja"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/gris_hint"
        android:layout_marginHorizontal="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:gravity="left">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/client_vector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/atencion_cliente"
            android:textColor="@color/naranja"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/gris_hint"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:gravity="left">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/config_vector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/config"
            android:textColor="@color/naranja"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/gris_hint"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:gravity="left">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/report_vector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/report"
            android:textColor="@color/naranja"/>
    </LinearLayout>

</LinearLayout>