<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gris_oscuro"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/banner_principal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Nombre de usuario"
            android:textSize="15dp"
            android:background="@drawable/inputs"
            android:textColorHint="@color/gris_hint"
            android:textColor="@color/gris_hint"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <EditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/inputs"
            android:textColorHint="@color/gris_hint"
            android:textColor="@color/gris_hint"
            android:hint="Contraseña"
            android:textSize="15dp"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp">
        <RadioButton
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gris_hint"
            android:text="Recordar contraseña"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gris_oscuro"
            android:textStyle="bold"
            android:text="@string/iniciar_sesion"/>
        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="12dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/naranja"
            android:layout_gravity="right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:text="NO TENGO CUENTA"
            android:textColor="@color/gris_hint"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/btnCrearCuenta"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:textColor="@color/gris_oscuro"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/crear_cuenta"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="INICIAR CON: "
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/naranja"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_logins"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/fb_icon"/>

        <Button
            android:id="@+id/btnGmail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/gmail_icon"/>

    </LinearLayout>

</LinearLayout>